cabal-version:      3.0
name:               stred
version:            0.1.0.0
author:             Lars Jellema
maintainer:         lars.jellema@gmail.com

library
  hs-source-dirs:   src
  default-language: GHC2021

  build-depends:
    , base
    , mtl
    , optics
    , optics-extra
    , safe-exceptions
    , text
    , vty

  exposed-modules:
    Stred
    Stred.EnumEditor
    Stred.LineEditor
    Stred.Widget

  default-extensions:
    BlockArguments
    DataKinds
    DuplicateRecordFields
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    UndecidableInstances

  ghc-options:
    -Wall
    -Wextra

executable stred
  main-is:          stred.hs
  hs-source-dirs:   .
  default-language: GHC2021

  build-depends:
    , base
    , safe-exceptions
    , stred
    , vty
    , vty-unix

  ghc-options:
    -threaded

  default-extensions:
    ImportQualifiedPost
