cabal-version:      3.0
name:               stred
version:            0.1.0.0
author:             Lars Jellema
maintainer:         lars.jellema@gmail.com

library
  hs-source-dirs:   src
  default-language: GHC2021

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , data-fix
    , mtl
    , safe-exceptions
    , scientific
    , text
    , vector
    , vty

  exposed-modules:
    Data.Tape
    Stred
    Stred.EnumEditor
    Stred.Image
    Stred.JsonEditor
    Stred.LineEditor
    Stred.ListEditor
    Stred.ReadShowEditor
    Stred.SelectByKey
    Stred.TabbedEditor
    Stred.Widget
    Stred.Prelude

  default-extensions:
    BlockArguments
    DerivingStrategies
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedLists
    OverloadedStrings
    PatternSynonyms
    TypeFamilies

  ghc-options:
    -Wall
    -Wextra

executable stred
  main-is:          stred.hs
  hs-source-dirs:   .
  default-language: GHC2021

  build-depends:
    , base
    , safe-exceptions
    , stred
    , vty
    , vty-unix

  ghc-options:
    -threaded

  default-extensions:
    ImportQualifiedPost
